@@ -3,6 +3,3 @@
 
  - When clicking to the send to database make an option for
    "new ones", "all of them", "cancel"
- 
- - show last catched wifis since the last service run
- 
