@@ -27,6 +27,7 @@
     <string name="MESSAGE_STATISTICS_CLOSED">\nOf which closed: </string>
     <string name="MESSAGE_STATISTICS_LASTAPP_TSTAMP">\nLast application run:</string>
     <string name="MESSAGE_STATISTICS_LASTSERVICE_TSTAMP">\nLast service run:</string>
+    <string name="MESSAGE_STATISTICS_NEW_WIFIS">\nNew WiFi since last run:</string>
     <string name="SERVICE_STARTED">wardrive Service started</string>
     <string name="SERVICE_STOPPED">wardrive Service stopped</string>
     <string name="GPS_ENABLED">GPS enabled</string>
